<resources>
    <string name="app_name">ClienteContentProviderUsuarios</string>
    <string name="contrase_a">Contraseña</string>
    <string name="e_mail">Correo</string>
    <string name="cancel">Cancelar</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Agregar</string>
    <string name="nombre">Nombre</string>
    <string name="userList">Lista de usuarios</string>
    <string name="agregar">Agregar Usuarios</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="tipo">Tipo MIME</string>
</resources>